# ChangeLog for app-misc/gcal
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/gcal/ChangeLog,v 1.24 2009/02/26 21:41:23 ulm Exp $

*gcal-3.01-r3 (26 Feb 2009)

  26 Feb 2009; Ulrich Mueller <ulm@gentoo.org>
  +files/gcal-3.01-gettext-charset.patch, +gcal-3.01-r3.ebuild:
  Change region codes for Germany and Switzerland according to ISO 3166-2,
  bug 144813. Specify input file encoding for xgettext. Assign RDEPEND.

  17 Sep 2008; Peter Volkov <pva@gentoo.org> gcal-3.01-r2.ebuild:
  Fixed glibc-2.8 build issue, bug #227121, thank Evil Compile Person for
  report.

  03 Feb 2008; Fabian Groffen <grobian@gentoo.org> gcal-3.01-r2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove ka0ttic from metadata.xml due to retirement.

  22 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> gcal-3.01.ebuild,
  gcal-3.01-r1.ebuild, gcal-3.01-r2.ebuild:
  Use mirror://gnu/ rather than ftp.gnu.org.

  17 May 2005; Aaron Walker <ka0ttic@gentoo.org> gcal-3.01-r2.ebuild:
  Don't install locale.alias as it conflicts with glibc.

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> gcal-3.01-r2.ebuild:
  stable on amd64

  05 Feb 2005; Michael Hanselmann <hansmi@gentoo.org> gcal-3.01-r2.ebuild:
  Stable on ppc.

  27 Dec 2004; <gongloo@gentoo.org> gcal-3.01-r2.ebuild:
  Added ~ppc-macos.

  12 Dec 2004; Jason Wever <weeve@gentoo.org> gcal-3.01-r2.ebuild:
  Stable on sparc.

  11 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> gcal-3.01-r2.ebuild:
  Stable on alpha.

  04 Nov 2004; Aaron Walker <ka0ttic@gentoo.org> gcal-3.01-r2.ebuild:
  Marked stable on x86.

  31 Oct 2004; Aaron Walker <ka0ttic@gentoo.org> metadata.xml:
  Added myself as maintainer.

*gcal-3.01-r2 (22 Oct 2004)

  22 Oct 2004; Aaron Walker <ka0ttic@gentoo.org>
  +files/gcal-3.01-mandir.diff, +gcal-3.01-r2.ebuild: