@@ -7,12 +7,12 @@ DIST gcal-3.01-iso3166.patch.gz 6521 RMD160 4bb845d87ed8c42f71da15e8a97c5dfadba7
 DIST gcal-3.01.tar.gz 2371244 RMD160 01b54c72df3cbae242d221745343db4a9f3615cb SHA1 2f8dda0f759760c38beccd07fb73b18b392d6920 SHA256 e2bb8162cb5d6ce1abd27ea19e7a8f333409ac1060f8c1693416b544d4cb32d9
 EBUILD gcal-3.01-r2.ebuild 1906 RMD160 d110676ef680c3730a3b5249fc0aea67ca248753 SHA1 e387f0ad4ce81792627437dee7d58b21fd1a169d SHA256 92aad0fef6cec9d99cbefbdf72c3ce8293088a9b0b6c5cd66d26c86f441bf165
 EBUILD gcal-3.01-r3.ebuild 2056 RMD160 b5acbdf6952ca928221a9dc79873aa163d58af95 SHA1 14bbed738422810885184505ac3eb2b30dd3a8fa SHA256 6bcdf7de6a57303e52d6501408940ed1e1fb2d7ead41a3ec8d3d6071ab3f2d2d
-MISC ChangeLog 2983 RMD160 ac3d0abba8a6ccb4f94fc0ada2db39d170fdf825 SHA1 3b0a2af568e311706ab92f0e520c86949169317a SHA256 860e1b2e280da23eea0e84f6c2861b10e6331c1c412ebb2db6af28f5245f2347
-MISC metadata.xml 165 RMD160 c4557a3518a065b077539be5a0f20e4735fc2141 SHA1 1831705b1eb97b63968fc9eef31aa904a69a854a SHA256 75ca85c472d4181ae0de529c83826baaebe75d9e750ee6621758b5096bceffcd
+MISC ChangeLog 3094 RMD160 c2808d1c478a259994b3f7effd471ee14db639fa SHA1 545538ced3c1942176c36578501bafaf1f898017 SHA256 370caa1f4ac2dd514aa96b2caa6e7040b00eb52432c67ad6c96224a6fcb1a05c
+MISC metadata.xml 968 RMD160 eefa706a311ecb3deb6e31ae9b71347b1adbe957 SHA1 7495c9c29b339a73db53c8cedfa6de85b8d56a50 SHA256 31d790d643b6c12f470ff93831e170a90dc77f6d8ff1370a4e0b55cd72360b21
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (GNU/Linux)
 
-iEYEARECAAYFAkmnDM4ACgkQOeoy/oIi7uza0gCgjTdkYyV8ncHdaQ7V2jkceOMI
-n2MAnisvb9AXD/ESRJTFKczxEJd5Rxc0
-=xqdv
+iEYEARECAAYFAknTiEIACgkQOeoy/oIi7uwXEQCgxiLMRhmMP7Xka3NkxMc57yXN
+KDUAnRgS/WhVnRdELiVEquZITYkHm2iR
+=NuC+
 -----END PGP SIGNATURE-----
