@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/gcal
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gcal/ChangeLog,v 1.24 2009/02/26 21:41:23 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gcal/ChangeLog,v 1.25 2009/04/01 15:27:43 ulm Exp $
+
+  01 Apr 2009; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add myself as maintainer. Add longdescription.
 
 *gcal-3.01-r3 (26 Feb 2009)
 
